Nat.tf
resource "aws_nat_gateway" "gate_nat" {
  allocation_id = aws_eip.gate_eip.id
  subnet_id     = aws_subnet.public_subnet_1.id

  tags = {
    Name = "gate_NAT"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gate_gw]
}
